--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <div class="nav">
                 <div class="navtitle">
                     <div class="navtext">
-                        <a class="user" href="Index.html"><i class="fa-solid fa-user" style="color: #000000; margin-top: 25px; margin-left: 10px;"></i></a>
+                        <a class="user" href="index.html"><i class="fa-solid fa-user" style="color: #000000; margin-top: 25px; margin-left: 10px;"></i></a>
                         <p class="text">Harish Karthik</p>
                     </div>
                     <div class="icons">
-                       <a href="Index.html"> <img class="icon" src="home.png" alt="home"></a>
+                       <a href="index.html"> <img class="icon" src="home.png" alt="home"></a>
                        <a href="achievments.html"><i class="fa-solid fa-file icon1" style="color: #000000;"></i></a>
                     </div>
                 </div>
